# vnr-ace-backend

./: API_FOR_FRONTEND.md  API_ROUTES_DOCUMENTATION.txt  DB_DESIGN.md  FRONTEND_CHANGES.md  VNR_ACE_Backend_Postman_Collection.json  alembic_error.txt  alembic_error_utf8.txt  app.py  check_data.py  check_pk.py  check_sync_db.py  check_table.py  check_users.py  create_student_data.py  create_table_and_data.py  create_test_users.py  debug_output.txt  debug_password.py  drop_tables.py  final_test.py  mini_hash.py  pyproject.toml  simple_test.py  test_api.py  test_async_engine.py  test_auth_chat.py  test_backend.py  test_classwork.py  test_classwork_llm.py  test_company_prep.py  test_direct.py  test_output.txt  test_previous_questions.py  test_results.txt  test_results_utf8.txt  verify_admissions_routing.py  verify_data.py
ace_graphs/: admissions_graph.py  classwork_graph.py  classwork_student_graph.py  placements_graph.py
agents/: core_modules.py
agents/classwork/: graphs.py
agents/placements/: graphs.py
classwork/: router.py
core/: db.py
data/: faculty_data.json  student_data.xlsx
data/departments/: Admissions.txt  Artificial Intelligence & Data Science, CSE-Cyber Security, Data Science.txt  CSE-AIML , IoT & Robotics and AI.txt  Department of Automobile Engineerin.txt  Department of Biotechnology.txt  Department of CSE&CSBS.txt  Department of Chemistry.txt  Placements.txt  (+9 more)
models/: __init__.py  audit_log.py  company.py  company_prep.py  minor_degree.py  offer.py  placement.py  student.py
placements/: readme.md  resume_ingester.py  resumes.py  router.py
routes/: api_router.py
scripts/: import_companies.py  import_offers.py  import_placements.py  import_students.py
(+80 files in other folders)
